examples/tests/const.ma

PI :: 3.14159
println(PI)

PI = 42.5  # compile error
